# cpp-file-encryptor-tool

./: CMakeLists.txt  README.md  file_encryptor.cpp
include/: EncryptionStrategies.hpp  FileEncryptor.hpp  HashVerifier.hpp  ProgressBar.hpp
src/: EncryptionStrategies.cpp  FileEncryptor.cpp  HashVerifier.cpp  ProgressBar.cpp  main.cpp
tests/: CMakeLists.txt  test_encryption.cpp  test_hash.cpp
